Changes in ccaPP version 0.3.1

    + Bugfix in functions for CCA: R session no longer crashes for higher-order 
      canonical correlations in case of high-dimensional data.


Changes in ccaPP version 0.3.0

    + Standardization in functions for CCA and maximum correlation is now 
      optional.
    
    + Functions for CCA and maximum correlation now return center and scale 
      estimates from standardization.
    
    + Slightly faster version of fastMedian().
    
    + Function permTest() now allows to supply permutations as an argument.
    
    + Bugfix in functions for CCA concerning side constraints for higher-order 
      canonical correlations.
    
    + Bugfix in functions for CCA: reduced data for higher-order canonical 
      correlations no longer standardized.
    
    + Bugfix in corM(): robust starting values now work with dummy variables.
    
    + Renamed internal C++ function rank() to fix error with clang++ under 
      OS X Mavericks.



Changes in ccaPP version 0.2.0

    + Functions ccaGrid() and ccaProj() now force consistency of the Spearman, 
      Kendall and quadrant correlation.
    
    + New functions maxCorGrid() and maxCorProj() for maximum correlation, 
      which retain the argument for consistency of the Spearman, Kendall and 
      quadrant correlation.
    
    + permTest(): now using the new functions maxCorGrid() and maxCorProj() 
      rather than ccaGrid() and ccaProj().
    
    + permTest(): argument 'cl' is now preferred over argument 'ncores' for 
      parallel computing.
    
    + Added fallback mode for robust standardization if the MAD of a variable 
      is zero.
    
    + Bugfix in ccaGrid() and its wrapper CCAgrid: seed for the random number 
      generator is no longer ignored.
    
    + Bugfix in CCAproj(): now correctly wrapped around ccaProj().



Changes in ccaPP version 0.1.1

    + Using package parallel now to detect the number of available processor 
      cores rather than OpenMP.
    