@@ -51,16 +51,9 @@
 #' @seealso \code{\link{maxCorGrid}}, \code{\link{maxCorProj}}
 #' 
 #' @examples 
-#' ## generate data
-#' library("mvtnorm")
-#' set.seed(1234)  # for reproducibility
-#' p <- 3
-#' q <- 2
-#' m <- p + q
-#' sigma <- 0.5^t(sapply(1:m, function(i, j) abs(i-j), 1:m))
-#' xy <- rmvnorm(100, sigma=sigma)
-#' x <- xy[, 1:p]
-#' y <- xy[, (p+1):m]
+#' data("diabetes")
+#' x <- diabetes$x
+#' y <- diabetes$y
 #' 
 #' ## Spearman correlation
 #' permTest(x, y, R=100, method = "spearman")
