@@ -1,5 +1,7 @@
 Changes in ccaPP version 0.3.1
 
+    + Added 'diabetes' data from Andrews & Herzberg (1985).
+    
     + Bugfix in functions for CCA: R session no longer crashes for higher-order 
       canonical correlations in case of high-dimensional data.
 
